--- a/template.yaml
+++ b/template.yaml
@@ -367,11 +367,33 @@ Resources:
     Properties:
       TableName: !Sub SectionDiaryTable-${PrNumber}
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: diary_id
           AttributeType: S
+        - AttributeName: date
+          AttributeType: S
+        - AttributeName: details
+          AttributeType: S
+        - AttributeName: serious
+          AttributeType: N
+        - AttributeName: created_at
+          AttributeType: S
+        - AttributeName: updated_at
+          AttributeType: S
+        - AttributeName: section
+          AttributeType: M
+        - AttributeName: user_ids
+          AttributeType: SS
+
       KeySchema:
-        - AttributeName: id
+        - AttributeName: diary_id
           KeyType: HASH
+        - AttributeName: user_ids
+          KeyType: HASH
+        - AttributeName: created_at
+          KeyType: RANGE
+        - AttributeName: updated_at
+          KeyType: RANGE
+
       ProvisionedThroughput:
         ReadCapacityUnits: 30
         WriteCapacityUnits: 30
