--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -10,7 +10,15 @@ on:
     #   - "patch/**"
 
 jobs:
+  delete_stack:
+    if: github.event.action == "synchronize"
+    uses: ./.github/workflows/delete-stack-template.yaml
+    secrets:
+      AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
+      AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
+      stach-name: debug-env-${{ github.event.pull_request.number }}
   deploy:
+    needs: [delete_stack]
     uses: ./.github/workflows/deploy_job_template.yaml
     with:
       pr-number: ${{ github.event.pull_request.number }}
