--- a/.github/workflows/delete-stack-template.yaml
+++ b/.github/workflows/delete-stack-template.yaml
@@ -20,6 +20,9 @@ env:
 jobs:
   delete-stack:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
