Feature/delete stask before deploy on pr (#10)
* update: when synchronize push, delete stack

* fix: delete stack template

* fix: add secrets on delete pr workflow

* fix: stack name to with

* fix: if statement of delete_stack on pr event

* fix: bug

* Update create_staging_for_PR.yaml

* fix: workflow

* Update create_staging_for_PR.yaml

* Update create_staging_for_PR.yaml

* Update delete_stack_on_pr_close.yaml

* Update create_staging_for_PR.yaml

* Update delete-stack-template.yaml

* Update delete-stack-template.yaml

* Update delete-stack-template.yaml

--- a/.github/workflows/delete_stack_on_pr_close.yaml
+++ b/.github/workflows/delete_stack_on_pr_close.yaml
@@ -1,4 +1,5 @@
 name: Delete Stack on PR Close
+
 on:
   pull_request:
     types:
@@ -9,3 +10,7 @@ jobs:
     uses: ./.github/workflows/delete-stack-template.yaml
     with:
       stack-name: debug-env-${{ github.event.number }}
+    secrets:
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
+      AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
