--- a/.github/workflows/delete-stack-template.yaml
+++ b/.github/workflows/delete-stack-template.yaml
@@ -6,29 +6,36 @@ on:
         description: 'Stack Name'
         required: true
         type: string
+    secrets:
+      AWS_ACCOUNT_NAME:
+        description: 'AWS ACCOUT'
+        required: true
+      AWS_GITHUB_OIDC_ROLE_NAME:
+        description: 'AWS GitHub OIDC Role Name'
+        required: true
 
 env:
   AWS_REGION: 'ap-northeast-1'
-  AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
-  AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
-  STACK_NAME: ${{ inputs.stack-name }}
 
 jobs:
   delete-stack:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-region: ${AWS_REGION}
-          role-to-assume: arn:aws:iam::${AWS_ACCOUNT_NAME}:role/${AWS_GITHUB_OIDC_ROLE_NAME}
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NAME }}:role/${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
 
       - name: Get Caller Identity
         run: aws sts get-caller-identity
 
       - name: Delete Stack
-        run: aws cloudformation delete-stack --stack-name ${STACK_NAME}
+        run: aws cloudformation delete-stack --stack-name ${{ inputs.stack-name }}
 
