--- a/template.yaml
+++ b/template.yaml
@@ -386,6 +386,15 @@ Resources:
           ProvisionedThroughput:
             ReadCapacityUnits: 5
             WriteCapacityUnits: 5
+        - IndexName: DateIndex
+          KeySchema:
+            - AttributeName: created_at
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
+          ProvisionedThroughput:
+            ReadCapacityUnits: 5
+            WriteCapacityUnits: 5
 
   TarakoSectionDiaryTable:
     Type: "AWS::DynamoDB::Table"
