--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -91,7 +91,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.1.0
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: ${{ job.status }}
+          SLACK_COLOR: green
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
           SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Success"
@@ -103,7 +103,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.1.0
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: ${{ job.status }}
+          SLACK_COLOR: red
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
           SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Failure"
