--- a/.github/workflows/create_staging_for_PR.yaml
+++ b/.github/workflows/create_staging_for_PR.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   delete_stack:
-    if: github.event.action == 'synchronize'
+    if: github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'with_delete')
     uses: ./.github/workflows/delete-stack-template.yaml
     with:
       stack-name: debug-env-${{ github.event.pull_request.number }}
