actions: デプロイ成功時にデプロイした環境のURLをSlack・PRにコメントする

--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -27,6 +27,9 @@ on:
       SLACK_WEBHOOK:
         description: 'Slack Webhook URL'
         required: false
+      TOKEN_GITHUB:
+        description: 'GitHub Token'
+        required: false
 
 env:
   AWS_REGION: 'ap-northeast-1'
@@ -76,35 +79,39 @@ jobs:
           deployed_url=$(aws cloudformation describe-stacks --stack-name ${STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='ApiUrl'].OutputValue" --output text)
           echo "deployed_url=$deployed_url" >> $GITHUB_OUTPUT
 
-      # - name: Comment on PR
-      #   if: success() && github.event_name == 'pull_request'
-      #   uses: JoseThen/comment-pr@v1.1.1
-      #   with:
-      #     comment: |
-      #       Deploy Success!!
-      #       Deployment URL: ${{ steps.deploy_step.outputs.deployed_url }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
       - name: Notify Slack to Deploy Success
         if: success() && env.SLACK_WEBHOOK != ''
         uses: rtCamp/action-slack-notify@v2.1.0
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: green
+          SLACK_COLOR: success
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
           SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Success"
-          SLACK_TEXT: "Deploy URL: ${{ steps.deploy_step.outputs.deployed_url }}"
+          SLACK_TEXT: |-
+            Deploy URL: ${{ steps.deploy_step.outputs.deployed_url }}
           SLACK_FOOTER: ${{ github.event.pull_request.html_url }}
-      
+
       - name: Notify Slack to Deploy Failure
         if: failure() && env.SLACK_WEBHOOK != ''
         uses: rtCamp/action-slack-notify@v2.1.0
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: red
+          SLACK_COLOR: failure
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
           SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Failure"
+          SLACK_TEXT: |-
+            Deploy Failed
           SLACK_FOOTER: ${{ github.event.pull_request.html_url }}
+
+      - name: Comment on PR
+        if: success() && github.event_name == 'pull_request'
+        uses: JoseThen/comment-pr@v1.1.1
+        with:
+          comment: |-
+            Deploy Success!!
+            Deploy URL: ${{ steps.deploy_step.outputs.deployed_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+
