--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -83,24 +83,24 @@ jobs:
 
       - name: Notify Slack to Deploy Success
         if: success() && env.SLACK_WEBHOOK != ''
-        uses: rtCamp/action-slack-notify@v2
+        uses: rtCamp/action-slack-notify@v2.2.1
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: ${{ job.status }}
+          SLACK_COLOR: '#00FF00'
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
-          SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Success! ${{ steps.deploy_step.outputs.deployed_url }}"
+          SLACK_TITLE: "#${{ env.PR_NUMBER }} デプロイ成功! ${{ steps.deploy_step.outputs.deployed_url }}"
           SLACK_FOOTER: ${{ github.event.pull_request.html_url }}
 
       - name: Notify Slack to Deploy Failure
         if: failure() && env.SLACK_WEBHOOK != ''
-        uses: rtCamp/action-slack-notify@v2
+        uses: rtCamp/action-slack-notify@v2.2.1
         env:
           SLACK_WEBHOOK: ${{ env.SLACK_WEBHOOK }}
-          SLACK_COLOR: failure
+          SLACK_COLOR: '#FF0000'
           SLACK_ICON: ${{ env.SLACK_ICON }}
           SLACK_USERNAME: ${{ env.SLACK_USERNAME }}
-          SLACK_TITLE: "#${{ env.PR_NUMBER }} Deploy Failure"
+          SLACK_TITLE: "#${{ env.PR_NUMBER }} デプロイ失敗!"
           SLACK_FOOTER: ${{ github.event.pull_request.html_url }}
 
       - name: Comment on PR
