--- a/.github/workflows/deploy_aws_on_dev.yaml
+++ b/.github/workflows/deploy_aws_on_dev.yaml
@@ -17,3 +17,4 @@ jobs:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
       AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
+      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
