--- a/.github/workflows/deploy_when_PR.yaml
+++ b/.github/workflows/deploy_when_PR.yaml
@@ -3,15 +3,10 @@ name: Deploy to staging environment for PR
 on:
   pull_request:
     types: [opened, synchronize, reopened, labeled, unlabeled]
-    # branches:
-    #   - "feature/**"
-    #   - "features/**"
-    #   - "fix/**"
-    #   - "patch/**"
 
 jobs:
   delete_stack:
-    if: github.event.action == 'synchronize'
+    if: github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'with_delete')
     uses: ./.github/workflows/delete-stack-template.yaml
     with:
       stack-name: debug-env-${{ github.event.pull_request.number }}
@@ -30,3 +25,4 @@ jobs:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
       AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
+      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
